--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 	</properties>
 
 	<dependencies>
-		<!-- 牟肖飞导 入的包===========开始===== -->
+		<!-- springboot的jar包支持thymeleaf架构-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -69,14 +69,14 @@
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.github.theborakompanioni/thymeleaf-extras-shiro -->
+		<!-- 是thymeleaf支持shiro标签 -->
 		<dependency>
 			<groupId>com.github.theborakompanioni</groupId>
 			<artifactId>thymeleaf-extras-shiro</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-
-		<!-- 牟肖飞导 入的包===========结束===== -->
+		
+		<!-- springboot必须包 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
@@ -119,6 +119,7 @@
 			<version>RELEASE</version>
 		</dependency>
 
+		<!-- mysql驱动包 -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
